--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -2,16 +2,21 @@
     display: flex;
     align-items: center;
     padding: 32px 0;
+    position: relative;
 }
 
 .navbar__background {
     position: fixed;
     top: 2%;
     left: -1%;
-    z-index: -1;
+    z-index: 0;
     font-family: 'Abril Fatface', cursive;
     font-size: 100px;
     color: rgba(60, 60, 60, 0.1);
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .navbar__logo {
@@ -24,4 +29,8 @@
     position: fixed;
     top: 32px;
     right: 96px;
+}
+
+.body--dark .navbar__background {
+    color: rgba(255, 255, 255, 0.1);
 }
