--- a/src/global.css
+++ b/src/global.css
@@ -36,12 +36,7 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
-    background-color: #F0F0F3;
-    color: #3C3C3C;
-    padding: 0 96px;
-    line-height: 130%;
-    font-size: 20px;
-    font-family: 'Nunito', sans-serif;
+
 }
 ol, ul {
     list-style: none;
@@ -64,9 +59,16 @@ a {
     color: #3C3C3C;
 }
 
-.dark {
-    background-color: black;
-    color: white;
+.body {
+    width: 100%;
+    height: auto;
+    min-height: 100vh;
+    background-color: #F0F0F3;
+    color: #3C3C3C;
+    padding: 0 96px;
+    line-height: 130%;
+    font-size: 20px;
+    font-family: 'Nunito', sans-serif;
 }
 
 input {
@@ -95,4 +97,19 @@ input::placeholder {
     background: #F0F0F3;
     box-shadow: -10px -10px 30px #FFFFFF, 10px 10px 30px rgba(174, 174, 192, 0.4);
     margin: 24px 0 32px;
+}
+
+.body--dark {
+    background-color: #3C3C3C;
+    color: white;
+}
+
+.body--dark p,
+.body--dark a {
+    color: white;
+}
+
+.body--dark .divider {
+    background: #3C3C3C;
+    box-shadow:  20px 20px 40px #2b2b2b, -20px -20px 40px #4d4d4d;
 }
